<resources>
    <string name="app_name">Si Boto Bangun</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_background">login background</string>
    <string name="close">close</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
</resources>